--- a/index.css
+++ b/index.css
@@ -17,3 +17,21 @@ body {
     margin: 20px auto;
     max-width: 700px;
 }
+
+.btn {
+    padding: 15px 30px ;
+    margin: auto;
+    max-width: 200px;
+    background-color: grey;
+    color: white;
+    cursor: pointer;
+    border-radius: 50px;
+    border: none;
+}
+
+.btn:hover {
+    background-color: black;
+    color: gainsboro;
+    transition: 0.5s ease;
+    transform: scale(1.3);
+}
